Added axis titles for the contour plot; Added border for surface plot; Added top margin for contour plot

--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -23,9 +23,7 @@
       <div class="col-sm-2">
         <div class="d-grid gap-2 pt-2">
           <h5>Surface</span></h5>
-          <button class="btn btn-primary" type="button">Load</button>
-          <button class="btn btn-primary" type="button">Save</button>
-          <button class="btn btn-primary" type="button">Save as</button>
+          <button class="btn btn-primary" type="button">Save surface to CSV</button>
         </div>
         <div class="d-grid gap-2 pt-2 mt-5">
           <h5>Device</span></h5>
@@ -47,7 +45,7 @@
       </div>
       <div class="col-sm-10">
         <div class="row">
-          <div class="col-sm-5"><div id="surface-plot"></div></div>
+          <div class="col-sm-5 border border-5"><div id="surface-plot"></div></div>
           <div class="col-sm-2 pt-3">
             <h5>Surface cut</h5>
             <span id="click-point-span" class="d-block">Clicked point: (0, 0, 0)</span>
@@ -62,7 +60,7 @@
               <button id="reset-surface-eye" class="btn btn-primary" type="button">Reset eye</button>
             </div>
           </div>
-          <div class="col-sm-5"><div id="chart2"></div></div>
+          <div class="col-sm-5 mt-2"><div id="contour-plot"></div></div>
         </div>
         <div class="row pt-5">
           <div class="col-sm-6"><div id="chart3"></div></div>
