--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -25,6 +25,7 @@
           <h5>Surface</span></h5>
           <button id="save-surface-csv-button" class="btn btn-primary" type="button">Save to CSV</button>
           <button id="save-surface-png-button" class="btn btn-primary" type="button">Save to PNG</button>
+          <button id="reset-surface-eye-button" class="btn btn-primary" type="button">Reset eye</button>
         </div>
         <div class="d-grid gap-2 pt-2 mt-5">
           <h5>Device</span></h5>
@@ -47,18 +48,11 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-sm-5 border border-5"><div id="surface-plot"></div></div>
-          <div class="col-sm-2 pt-3">
-            <h5>Surface cut</h5>
+          <div class="col-sm-2 pt-2">
+            <h5>Contour</h5>
             <span id="click-point-span" class="d-block">Clicked point: (0, 0, 0)</span>
-            <span id="selected-point-1-span" class="d-block">Point 1: (x, y, z)</span>
-            <span id="selected-point-2-span" class="d-block">Point 2: (x, y, z)</span>
             <div class="d-grid gap-2 pt-2">
-              <button id="select-point-button" class="btn btn-primary" type="button">Select point</button>
-              <button id="reset-points-button" class="btn btn-primary" type="button">Reset points</button>
               <button id="cut-surface-button" class="btn btn-primary" type="button">Cut</button>
-            </div>
-            <div class="d-grid gap-2 mt-5">
-              <button id="reset-surface-eye" class="btn btn-primary" type="button">Reset eye</button>
             </div>
           </div>
           <div class="col-sm-5 mt-2"><div id="contour-plot"></div></div>
