Added reset eye to contour plot

--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -50,8 +50,11 @@
           <div class="col-sm-5 border border-5"><div id="surface-plot"></div></div>
           <div class="col-sm-2 pt-2">
             <h5>Contour</h5>
-            <span id="click-point-span" class="d-block">Clicked point: (0, 0, 0)</span>
             <div class="d-grid gap-2 pt-2">
+              <button id="save-contour-csv-button" class="btn btn-primary" type="button">Save to CSV</button>
+              <button id="save-contour-png-button" class="btn btn-primary" type="button">Save to PNG</button>
+              <button id="reset-contour-eye-button" class="btn btn-primary" type="button">Reset eye</button>
+              <span id="click-point-span" class="d-block mt-2">Clicked point: (0, 0, 0)</span>
               <button id="cut-surface-button" class="btn btn-primary" type="button">Cut</button>
             </div>
           </div>
