Disable 'cut' button

--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -58,7 +58,7 @@
               <button id="save-contour-png-button" class="btn btn-primary" type="button">Save to PNG</button>
               <button id="reset-contour-eye-button" class="btn btn-primary" type="button">Reset eye</button>
               <span id="click-point-span" class="d-block mt-2">Clicked point: (-, -, -)</span>
-              <button id="cut-surface-button" class="btn btn-primary" type="button">Set cut</button>
+              <!-- <button id="cut-surface-button" class="btn btn-primary" type="button">Set cut</button> -->
             </div>
           </div>
           <div class="col-sm-5 mt-2">
