--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="loader.js"></script>
   <script src="surfacePlot.js"></script>
@@ -16,6 +17,7 @@
   <script src="cutPlotX.js"></script>
   <script src="cutPlotY.js"></script>
   <script src="surfaceCutter.js"></script>
+  <script src="calibration.js"></script>
 
 </head>
 <body>
@@ -36,7 +38,7 @@
         </div>
         <div class="d-grid gap-2 pt-2 mt-4">
           <h5>Home</span></h5>
-          <button class="btn btn-primary" type="button">Auto calibration</button>
+          <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#auto-calibration-modal">Auto calibration</button>
           <button class="btn btn-primary" type="button">Z calibration</button>
           <button class="btn btn-primary" type="button">Start scan</button>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#rescanZoneModal">Rescan zone</button>
@@ -143,6 +145,62 @@
       </div>
     </div>
   </div>
+
+  <div class="modal" id="auto-calibration-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Auto calibration</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          <div id="start-calibration-init-state" class="container">
+            <div class="row">
+              <img class="d-block" src="auto-calibration.png" alt="Italian Trulli">
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+              <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+              </symbol>
+              <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+              </symbol>
+              <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </symbol>
+            </svg>
+            <div class="row mt-3">
+              <div class="alert alert-warning d-flex align-items-center" role="alert">
+                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                <div>
+                  <strong>Warning!</strong> Prepare the surface!
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <button id="start-calibration-button" class="btn btn-primary" type="button">Start calibration</button>
+            </div>
+          </div>
+          <div id="start-calibration-process-state" class="container">
+            <span>Calibration...</span>
+            <div class="progress">
+              <div id="calib-progress" class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div id="calibration-finished-state" class="container">
+            <span class="d-block">Auto calibration has been successfully finished!</span>
+            <span class="d-block">Return to start window...</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
 <script>
@@ -154,6 +212,7 @@
     surfaceCutter.init();
     cutPlotX.init(surfaceCutter.getCutX(1));
     cutPlotY.init(surfaceCutter.getCutY(3));
+    calibration.init();
   });
 
     // --- update data ---
