--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -89,14 +89,14 @@
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Save Y</button>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item">Save as CSV</a>
+                  <a id="save-cut-y-csv-button" class="dropdown-item">Save as CSV</a>
                   <a id="save-cut-y-png-button" class="dropdown-item">Save as PNG</a>
                 </div>
               </div>
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Save X</button>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item">Save as CSV</a>
+                  <a id="save-cut-x-csv-button" class="dropdown-item">Save as CSV</a>
                   <a id="save-cut-x-png-button" class="dropdown-item">Save as PNG</a>
                 </div>
               </div>
