Added save to CSV

--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -56,7 +56,7 @@
           <div class="col-sm-2 pt-2">
             <h5>Contour</h5>
             <div class="d-grid gap-2 pt-2 mb-4">
-              <button id="save-contour-csv-button" class="btn btn-primary" type="button">Save to CSV</button>
+              <!-- <button id="save-contour-csv-button" class="btn btn-primary" type="button">Save to CSV</button> -->
               <button id="save-contour-png-button" class="btn btn-primary" type="button">Save to PNG</button>
               <button id="reset-contour-eye-button" class="btn btn-primary" type="button">Reset eye</button>
               <span id="click-point-span" class="d-block mt-2">Clicked point: (-, -, -)</span>
