Work on start div

--- a/code/soft/index.html
+++ b/code/soft/index.html
@@ -24,6 +24,10 @@
 </head>
 <body>
   <div class="container-fluid">
+    Hello
+  </div>
+
+  <div class="container-fluid d-none">
     <div class="row">
       <div class="col-sm-2 mb-4">
         <div class="d-grid gap-2 pt-2">
